# code-monkey-toolset

./: .gitignore  .pre-commit-config.yaml  README.md  notes.txt  setup.cfg  setup.py  tools.ini
codemonkey/: __init__.py  atom.py  click.py  config.py  pylava_shim.py  slugify.py
codemonkey/cli/: egg.py  gitcmds.py  gitlabcmds.py  group_pip.py  monkeywrench.py  pipcmds.py  prjcmds.py  ritualcmds.py  taskcmds.py  tester.py  venvcmds.py
codemonkey/cli/pip/: checker.py  chill.py  purge.py  switch.py
codemonkey/emacs/: pylava_shim.py
codemonkey/lib/: bus.py  click.py  config.py  enum.py  event.py  ospath.py  savedata.py
codemonkey/python/: __init__.py
codemonkey/service/: git.py  util.py  venv.py
codemonkey/signal/: event.py  exceptions.py
example/: sitecustomize.py  wrench.ini
