
[metadata]
name = code-monkey-toolset
author = Michael Fagan
author_email = michael.charles.fagan@gmail.com
license = MIT
description = a collection of utilities to make a development environment better
keywords = development, tools
url = https://github.com/badmonkey/code-monkey-toolset
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Text Editors :: Emacs
    Topic :: Utilities
    Private :: Do Not Upload to pypi server

[options]
python_requires = >=3.6
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    click
    setuptools
    six
    ptpython
    pytest
    py-spy
    black
    pylava
    pylint
    pylava_pylint
    pycodestyle
    mccabe
    pyflakes

[options.entry_points]
console_scripts =
    pylava-emacs-shim = codemonkey.pylava_shim:main
