
[metadata]
name = codemonkey-toolset
version = 1.0.0
author = Michael Fagan
author_email = michael.charles.fagan@gmail.com
license = MIT
description = a collection of utilities to make a (my) development environment better
keywords = development, tools
url = https://github.com/badmonkey/code-monkey-toolset
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Text Editors :: Emacs
    Topic :: Utilities
    Private :: Do Not Upload to pypi server

[options]
python_requires = >=3.6
zip_safe = True
include_package_data = True
packages = find:
package_dir =
     = .
install_requires =
    codefresh

[options.extras_require]
tools =
    stackprinter
    ptpython
    winpdb
    ptpdb
    pytest
    py-spy
    bindep
    gita
    pylama-shim
    vmd
linters =
    pre-commit
    isort
    black
    pylama
    pylint
    pylama_pylint
    mccabe
    pyflakes
    mypy
    bandit
    vulture

[options.entry_points]
console_scripts =
    tester = codemonkey.cli.tester:init
    wrench = codemonkey.cli.monkeywrench:init
    pylint-shim-pylava = codemonkey.emacs.pylava_shim:main

[isort]
line_length=100
multi_line_output=3
include_trailing_comma=true

[pylava]
format = pylint
skip = .eggs/*,tmp/*,docs/*,tests/*
linters = pyflakes,mccabe,pylint
#linters = pyflakes,mccabe,pylint,pycodestyle,pydocstyle
ignore = C0111,C0301,C0330,C0412,C0414,W0603,W1201,W1202,W1203,R0201

#
# C0111 missing docstring
# C0301 line too long
# C0330 wrong hanging indentation
# C0412 imports are not grouped
# C0414 useless import alias
# W0603 using the global statement
# W1201 specify logging format as parameters
# W1202 use logging parameters instead of % formatting
# W1203 use logging parameters instead of f-string formatting
# R0201 Method could be a function
#

[pylava:pyflakes]
builtins = _,public

[pylava:pylint]
max_line_length = 100
dummy-variables-rgx = _.*
additional-builtins = public

[tool:pytest]
testpaths = tests
